ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rubin-jenkins-workers
  labels:
    istio-injection: enabled
