istio-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: rubin-jekins-workers
spec:
  hosts:
  - ci.lsst.codes
  - eups.lsst.codes
  - docker.io
  - www.docker.com
  ports:
  - number: 443
    name: tls
    protocol: TLS
  - number: 55555
    name: hudson
    protocol: TCP
  location: MESH_EXTERNAL
  resolution: DNS
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - '*'
    tls:
      mode: PASSTHROUGH
  - port:
      number: 55555
      name: tcp
      protocol: TCP
    hosts:
    - ci.lsst.codes
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-rubin-jenkins-workers
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: rubin-jenkins-workers
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rubin-jenkins-workers-hudson
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: rubin-jenkins-workers-hudson
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-rubin-jenkins-workers-through-egress-gateway
spec:
  hosts:
  - '*'
  gateways:
  - mesh
  - istio-egressgateway
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - '*'
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: rubin-jenkins-workers
        port:
          number: 443
  - match:
    - gateways:
      - istio-egressgateway
      sniHosts:
      - ci.lsst.codes
    route:
    - destination:
        host: ci.lsst.codes
  - match:
    - gateways:
      - istio-egressgateway
      sniHosts:
      - eups.lsst.codes
    route:
    - destination:
        host: eups.lsst.codes
  - match:
    - gateways:
      - istio-egressgateway
      sniHosts:
      - docker.io
    route:
    - destination:
        host: docker.io
  - match:
    - gateways:
      - istio-egressgateway
      sniHosts:
      - www.docker.com
    route:
    - destination:
        host: www.docker.com

  tcp:
  - match:
    - destinationSubnets:
      - 52.202.46.22/32
      gateways:
      - mesh
      port: 55555
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: rubin-jenkins-workers-hudson
        port:
          number: 55555
  - match:
    - gateways:
      - istio-egressgateway
      port: 55555
    route:
    - destination:
        host: ci.lsst.codes
        port:
          number: 55555
      weight: 100
